fixes layout shifting when switching between tabs

--- a/src/app/features/pokemon-index/pokemon-index.component.scss
+++ b/src/app/features/pokemon-index/pokemon-index.component.scss
@@ -1,4 +1,4 @@
-.pokemon-index-container { height: 600px; }
+.pokemon-index-container { height: 572px; }
 
 .pokemon-type-chip-container {
   display: flex;
