--- a/src/app/features/pokemon-move-index/pokemon-moves-index.component.scss
+++ b/src/app/features/pokemon-move-index/pokemon-moves-index.component.scss
@@ -1,4 +1,4 @@
-.pokemon-moves-index-container { height: 600px; }
+.pokemon-moves-index-container { height: 572px; }
 
 .center-content {
   text-align: center;
