--- a/src/app/features/pokemon-type-effect-index/pokemon-type-effect-index.component.scss
+++ b/src/app/features/pokemon-type-effect-index/pokemon-type-effect-index.component.scss
@@ -1,5 +1,5 @@
 .pokemon-type-effect-index-container {
-  height: 600px;
+  height: 572px;
 }
 
 .pokemon-type-chip-container {
@@ -19,16 +19,16 @@
   vertical-align: middle;
 }
 
-.w-104 {
-  min-width: 104px;
+.w-100 {
+  width: 100px;
 }
 
-.w-180 {
-  min-width: 188px;
+.w-142 {
+  width: 142px;
 }
 
-.w-200 {
-  min-width: 200px;
+.w-800 {
+  width: 800px;
 }
 
 .no-types {
